--- a/landingpage.html
+++ b/landingpage.html
@@ -127,7 +127,7 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                                     <p>Answer: "I tend to make songs in a key that is too high or too low for my vocal range. It would be really nice to just be able to quickly transpose my songs on the spot."</p>
 
                                                                     <h3 style="padding-left: 2.5vh;">Affinity Wall: </h3>
-                                                                    <div id="affinityWall" style="width: 100%; height: 100vmin; background-image: url(Images/research.jpeg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                                                                    <div id="affinityWall" style="width: 100%; height: 100vmin; background-image: url(https://donuttelo.github.io/min240-002/research.jpeg); background-size: contain; background-repeat: no-repeat; background-position: center;">
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -144,7 +144,7 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                                 <div class="card-body">
                                                                     <h3>Persona:</h3>
                                                                     <div id="josh" style="margin-bottom: 20px;">
-                                                                        <img src="Images/Pancake%20Night%202-Pancake%20Night%202-0182.jpg" width="250px">
+                                                                        <img src="final/images/Pancake%20Night%202-Pancake%20Night%202-0182.jpg" width="250px">
                                                                     </div>
                                                                     <b>Josh Ferguson:</b>
                                                                     <p>21 years old, Male, NKU Entrepreneurship Major student, Student Painter Intern</p>
@@ -178,8 +178,8 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                             </div>
                                                             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                                                                 <div class="card-body"><br>
-                                                                    <div id="storyBoard" style="width: 100%; height: 100vmin; background-image: url(Images/wireframeFinal.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;"></div>
-                                                                    <p><br></p><div id="storyBoard" style="width: 100%; height: 100vmin; background-image: url(Images/workFlowFinal.png); background-size: contain; background-repeat: no-repeat; background-position: center;"></div>
+                                                                    <div id="storyBoard" style="width: 100%; height: 100vmin; background-image: url(https://donuttelo.github.io/min240-002/wireframeFinal.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;"></div>
+                                                                    <p><br></p><div id="storyBoard" style="width: 100%; height: 100vmin; background-image: url(https://donuttelo.github.io/min240-002/workFlowFinal.png); background-size: contain; background-repeat: no-repeat; background-position: center;"></div>
                                                                 </div>
                                                             </div>
                                                         </div>
