--- a/landingpage.html
+++ b/landingpage.html
@@ -144,7 +144,7 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                                 <div class="card-body">
                                                                     <h3>Persona:</h3>
                                                                     <div id="josh" style="margin-bottom: 20px;">
-                                                                        <img src="final/images/Pancake%20Night%202-Pancake%20Night%202-0182.jpg" width="250px">
+                                                                        <img url="https://donuttelo.github.io/min240-002/Pancake%20Night%202-Pancake%20Night%202-0182.jpg" width="250px">
                                                                     </div>
                                                                     <b>Josh Ferguson:</b>
                                                                     <p>21 years old, Male, NKU Entrepreneurship Major student, Student Painter Intern</p>
@@ -163,7 +163,7 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                                                                 <div class="card-body">
                                                                     <h3 style="padding-left: 2.5vh;">Story Board: </h3>
-                                                                    <div id="storyBoard" style="width: 100%; height: 100vmin; background-image: url(Images/Ted.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
+                                                                    <div id="storyBoard" style="width: 100%; height: 100vmin; background-image: url(https://donuttelo.github.io/min240-002/Ted.jpg); background-size: contain; background-repeat: no-repeat; background-position: center;">
                                                                 </div>
                                                             </div>
                                                         </div>
