--- a/landingpage.html
+++ b/landingpage.html
@@ -144,7 +144,7 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                                 <div class="card-body">
                                                                     <h3>Persona:</h3>
                                                                     <div id="josh" style="margin-bottom: 20px;">
-                                                                        <div id="joshPic" style="width: 250px; height: 300px; background-image: url(images/Pancake%20Night%202-Pancake%20Night%202-0182.jpg); background-size: contain; background-repeat: no-repeat; padding-bottom: 10px;"></div>
+                                                                        <div id="joshPic" style="width: 250px; height: 300px; background-image: url(https://donuttelo.github.io/min240-002/Pancake%20Night%202-Pancake%20Night%202-0182.jpg); background-size: contain; background-repeat: no-repeat; padding-bottom: 10px;"></div>
                                                                     </div>
                                                                     <b>Josh Ferguson:</b>
                                                                     <p>21 years old, Male, NKU Entrepreneurship Major student, Student Painter Intern</p>
