--- a/landingpage.html
+++ b/landingpage.html
@@ -189,11 +189,18 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                             <div class="card-header" id="headingFive">
                                                                 <h5 class="mb-0">
                                                                     <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                                                        Video Pitch
+                                                                        Pitch Video
                                                                     </button>
                                                                 </h5>
                                                             </div>
-                                                            
+                                                            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                                                                <div class="card-body"><br>
+                                                                    <div class="embed-responsive embed-responsive-16by9">
+                                                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=ilGxMuaPLEU&feature=youtu.be"></iframe>
+</div>    
+                                                                </div>
+                                                            </div>
+                                                        </div
 
                                                     </div>
                                                 </div>
