--- a/landingpage.html
+++ b/landingpage.html
@@ -196,10 +196,12 @@ https://donuttelo.github.io/min240-002/william-white-34988-unsplash.jpg?w=3200&a
                                                             <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                                                                 <div class="card-body"><br>
                                                                     <div class="embed-responsive embed-responsive-16by9">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ilGxMuaPLEU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>    
+                                                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ilGxMuaPLEU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>    
                                                                 </div>
                                                             </div>
-                                                        </div
+                                                            </div>
+                                                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ilGxMuaPLEU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>    
+
 
                                                     </div>
                                                 </div>
